feat: Add console Easter egg, update site footer content and links, and refine SEO metadata and descriptions

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -54,11 +54,13 @@ const defaultJsonLd = {
   author: {
     "@type": "Person",
     name: "Jonathan Reed",
+    alternateName: "Jonathan R Reed",
     url: "https://jonathanrreed.com",
   },
   creator: {
     "@type": "Person",
     name: "Jonathan Reed",
+    alternateName: "Jonathan R Reed",
     url: "https://jonathanrreed.com",
   },
   offers: {
