--- a/src/pages/zen.astro
+++ b/src/pages/zen.astro
@@ -22,6 +22,29 @@ import SEO from "../components/SEO.astro";
 			canonical="https://zentype.jonathanrreed.com/zen"
 			ogImage="/Favicon.webp"
 		/>
+		<!-- Developer Console Easter Egg -->
+		<script>
+			(function () {
+				if (typeof window === "undefined") return;
+
+				const ascii = `
+    ___  ________  ________     
+   |\\  \\|\\   __  \\|\\   __  \\    
+   \\ \\  \\ \\  \\|\\  \\ \\  \\|\\  \\   
+ __ \\ \\  \\ \\   _  _\\ \\   _  _\\  
+|\\  \\\\_\\  \\ \\  \\\\  \\\\ \\  \\\\  \\|
+\\ \\________\\ \\__\\\\ _\\\\ \\__\\\\ _\\
+ \\|________|\\|__|\\|__|\\|__|\\|__|
+				`;
+
+				console.log(ascii);
+				console.log("Hey there. Interested in code?");
+				console.log(
+					"Check out my GitHub: https://github.com/JonathanRReed",
+				);
+				console.log("Most of my sites repos are open source.");
+			})();
+		</script>
 	</head>
 	<body>
 		<ClientTransitions client:load />
