--- a/src/pages/zen.astro
+++ b/src/pages/zen.astro
@@ -11,6 +11,7 @@ import ClientTransitions from "../components/ClientTransitions";
 import SiteHeader from "../components/SiteHeader";
 import ErrorBoundary from "../components/ErrorBoundary";
 import SEO from "../components/SEO.astro";
+import SpotlightLayer from "../components/SpotlightLayer";
 ---
 
 <!doctype html>
@@ -71,6 +72,7 @@ import SEO from "../components/SEO.astro";
 					<div class="forest-rays" aria-hidden="true"></div>
 					<div class="ocean-lights" aria-hidden="true"></div>
 				</div>
+				<SpotlightLayer client:load />
 
 				<ZenCanvas
 					client:load
